In native github workflow for C#, onboard AL23, Fedora and Ubuntu platforms for glibc + Onboard a musl variant of the workflow (#476)
* Fix GitHub workflow pt-1

* Uncache temporarily to see if it will fix the unicode issue

* Use Dmaven.test.skip=true tag to skip test compilation and workaround unicode issue

* Install libasan to make cmake build successful

* Add libubsan to fix cmake build

* fix path issue

* SerDe import fix until the fix PR is merged and this branch is rebased

* Exclude KafkaFlow tests as they are not unit tests and need AWS creds

* Add back maven cache logic as the build is now stable

* Add musl workflow

* refactor musl

* Fix musl build by disabling tests and setting locale

* protoc fix for alpine musl systems

* cd into correct dir

* Remove redundant steps

* cd into right dir pt-3

* build csharp twice due to protobuf ordering issues

* Come up with a multi-distro matrix solution for the csharp workflow

* matrix for various distros

* Remove centos due to docker image pull issues

* Remove redundant curl install causing build issues

* Install more libraries and right versions to make it work

* Refactor to get around pipe issues

* Add dotnet index in opensuse os

* Drop the no gpg checks tag on opensuse OS

* Remove less used open suse OS from the test matrix

* ubuntu clang tidy add

* Disable cmake tests in certain OSes because signal.h is not available

* Disable quality gate and tests in C layer due to dependency issues

* Move to the right dir

* Disable building tests when disable tests are on

* fix a dotnet patch version to install

* exact dotnet version sepc

* Set minimum version to 100 and latestFeature tag

* Add zlib package for ubnutu distro

--- a/native-schema-registry/c/CMakeLists.txt
+++ b/native-schema-registry/c/CMakeLists.txt
@@ -55,9 +55,15 @@ include_directories(${LIB_NATIVE_SCHEMA_REGISTRY_PATH})
 # --- Python Integration ---
 
 add_subdirectory("src")
-include (CTest)
-enable_testing()
-add_subdirectory("test")
+
+# Option to disable tests (useful for musl builds have cmocka issues)
+option(DISABLE_TESTS "Disable CTest and test subdirectory" OFF)
+
+if(NOT DISABLE_TESTS)
+    include (CTest)
+    enable_testing()
+    add_subdirectory("test")
+endif()
 
 # Option to disable quality gates (they run by default)
 option(DISABLE_QUALITY_GATES "Disable automatic quality gates on build" OFF)
@@ -82,8 +88,12 @@ add_custom_target(quality_gates
     VERBATIM
 )
 
-# Add dependencies to all main targets and tests
-add_dependencies(quality_gates ${SERDE_MODULE_NAME} ${DATA_TYPES_MODULE_NAME} ${TEST_TARGETS} copy-libs-for-tests)
+# Add dependencies - conditional based on whether tests are enabled
+if(NOT DISABLE_TESTS)
+    add_dependencies(quality_gates ${SERDE_MODULE_NAME} ${DATA_TYPES_MODULE_NAME} ${TEST_TARGETS} copy-libs-for-tests)
+else()
+    add_dependencies(quality_gates ${SERDE_MODULE_NAME} ${DATA_TYPES_MODULE_NAME})
+endif()
 
 if(NOT DISABLE_QUALITY_GATES)
     # Add quality gates to run automatically on every build
@@ -95,5 +105,10 @@ if(NOT DISABLE_QUALITY_GATES)
         COMMENT "Running quality gates: tests, static analysis, and coverage"
         VERBATIM
     )
-    add_dependencies(quality_gates_auto ${SERDE_MODULE_NAME} ${DATA_TYPES_MODULE_NAME} ${TEST_TARGETS} copy-libs-for-tests)
+    # Add conditional dependencies for quality_gates_auto as well
+    if(NOT DISABLE_TESTS)
+        add_dependencies(quality_gates_auto ${SERDE_MODULE_NAME} ${DATA_TYPES_MODULE_NAME} ${TEST_TARGETS} copy-libs-for-tests)
+    else()
+        add_dependencies(quality_gates_auto ${SERDE_MODULE_NAME} ${DATA_TYPES_MODULE_NAME})
+    endif()
 endif()
