--- a/native-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe/AWSGsrSerDe.csproj
+++ b/native-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe/AWSGsrSerDe.csproj
@@ -5,7 +5,7 @@
         <CodeAnalysisRuleSet>GlueSchemaRegistry.ruleset</CodeAnalysisRuleSet>
          <PackageId>AWSGsrSerDe</PackageId>
          <!-- Matching with java layer version -->
-          <Version>1.1.25</Version>
+          <Version>1.0.0</Version>
           <Company>Amazon</Company>
           <Product>AWS Glue Schema Registry CSharp SerDe</Product>
           <Description>AWS Glue Schema Registry serializers/deserializers for .NET (Avro/JSON/Protobuf).</Description>
@@ -46,6 +46,7 @@
     
     <ItemGroup>
       <None Include=".\bin\Release\net8.0\*.so" Pack="true" PackagePath="runtimes/linux-x64/native/" CopyToOutputDirectory="PreserveNewest" />
+      <None Include="java-version.txt" Pack="true" PackagePath="content/" CopyToOutputDirectory="Always" />
     </ItemGroup>
 
 
