--- a/native-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe/AWSGsrSerDe.csproj
+++ b/native-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe/AWSGsrSerDe.csproj
@@ -5,7 +5,7 @@
         <CodeAnalysisRuleSet>GlueSchemaRegistry.ruleset</CodeAnalysisRuleSet>
          <PackageId>AWSGsrSerDe</PackageId>
          <!-- Matching with java layer version -->
-          <Version>1.1.25</Version>
+          <Version>1.0.0</Version>
           <Company>Amazon</Company>
           <Product>AWS Glue Schema Registry CSharp SerDe</Product>
           <Description>AWS Glue Schema Registry serializers/deserializers for .NET (Avro/JSON/Protobuf).</Description>
@@ -44,8 +44,23 @@
 
     <Import Project="..\Libs\Libs.projitems" Label="Shared" />
     
+    <!-- Generate native-shared-object-version.txt from POM at build time using bash -->
+    <Target Name="GenerateNativeSharedObjectVersion" BeforeTargets="BeforeBuild">
+      <PropertyGroup>
+        <NativeVersionFile>$(MSBuildProjectDirectory)/native-shared-object-version.txt</NativeVersionFile>
+        <ExtractScript>$(MSBuildProjectDirectory)/scripts/extract-native-so-version.sh</ExtractScript>
+      </PropertyGroup>
+      
+      <!-- Make script executable and run it to generate version file -->
+      <Exec Command="chmod +x &quot;$(ExtractScript)&quot;" />
+      <Exec Command="bash &quot;$(ExtractScript)&quot; > &quot;$(NativeVersionFile)&quot;" />
+      
+      <Message Text="Generated native-shared-object-version.txt from POM" Importance="high" />
+    </Target>
+
     <ItemGroup>
       <None Include=".\bin\Release\net8.0\*.so" Pack="true" PackagePath="runtimes/linux-x64/native/" CopyToOutputDirectory="PreserveNewest" />
+      <None Include="native-shared-object-version.txt" Pack="true" PackagePath="content/" CopyToOutputDirectory="Always" />
     </ItemGroup>
 
 
