Add comprehensive fuzz testing support
- Add SharpFuzz 2.2.0 dependency to AWSGsrSerDe.Tests.csproj
- Implement GlueSchemaRegistryKafkaSerializerFuzzTests with 6 comprehensive test methods:
  * FuzzAvroSerialization - Tests Avro GenericRecord handling
  * FuzzProtobufSerialization - Tests Protocol Buffers message processing
  * FuzzJsonSerialization - Tests JSON Schema Draft 07 validation
  * FuzzCorruptedData - Tests data corruption scenarios
  * FuzzConfigurationHandling - Tests configuration validation
  * FuzzRoundTripSerialization - Tests end-to-end serialization/deserialization
- Fix missing namespace imports in GlueSchemaRegistrySerializer.cs and GlueSchemaRegistryDeserializer.cs
- All fuzz tests include proper exception handling and graceful degradation validation

--- a/native-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe.Tests/AWSGsrSerDe.Tests.csproj
+++ b/native-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe.Tests/AWSGsrSerDe.Tests.csproj
@@ -28,6 +28,7 @@
         <AdditionalFiles Include="stylecop.json" />
         <PackageReference Include="System.Runtime.Caching" Version="6.0.0" />
         <PackageReference Include="System.Text.Json" Version="9.0.9" />
+        <PackageReference Include="SharpFuzz" Version="2.2.0" />
     </ItemGroup>
 
     <ItemGroup>
