Rectify arm runner id

--- a/.github/workflows/build-csharp.yml
+++ b/.github/workflows/build-csharp.yml
@@ -52,7 +52,7 @@ jobs:
   build-csharp-multi-distro:
     continue-on-error: false
     timeout-minutes: 60
-    runs-on: ${{ matrix.arch == 'arm64' && 'ubuntu-24.04-arm64' || 'ubuntu-latest' }}
+    runs-on: ${{ matrix.arch == 'arm64' && 'ubuntu-22.04-arm' || 'ubuntu-latest' }}
     strategy:
       matrix:
         arch: [x64, arm64]
