--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -192,7 +192,7 @@
             <groupId>software.amazon.glue</groupId>
             <artifactId>schema-registry-serde</artifactId>
             <version>${parent.version}</version>
-            <type>test-jar</type>
+            <classifier>tests</classifier>
             <scope>test</scope>
         </dependency>
     </dependencies>
