--- a/multilang-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe/AWSGsrSerDe.csproj
+++ b/multilang-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe/AWSGsrSerDe.csproj
@@ -14,8 +14,10 @@
           <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
           <!-- Additional package metadata -->
           <PackageIcon>icon.png</PackageIcon>
-          <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+          <PackageReadmeFile>README.md</PackageReadmeFile>
+          <PackageLicenseFile>LICENSE</PackageLicenseFile>
           <Authors>Amazon Web Services</Authors>
+          <Copyright>Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.</Copyright>
           <PackageTags>aws;glue;schema-registry;avro;json;protobuf;kafka;serialization</PackageTags>
     </PropertyGroup>
 
@@ -70,16 +72,11 @@
 
     <!-- Include additional files for NuGet package structure -->
     <ItemGroup>
-      <!-- Include C#-specific README -->
-      <None Include="../README.md" Pack="true" PackagePath="README.md" />
-      
-      <!-- Include icon -->
-      <None Include="../icon.png" Pack="true" PackagePath="icon.png" />
-      
-      <!-- Include license and legal files from root -->
-      <None Include="../../../../LICENSE.txt" Pack="true" PackagePath="LICENSE" />
-      <None Include="../../../../NOTICE.txt" Pack="true" PackagePath="NOTICE" />
-      <None Include="../../../../THIRD-PARTY-LICENSES.txt" Pack="true" PackagePath="THIRD-PARTY-LICENSES" />
+      <None Include="../README.md" Pack="true" PackagePath="" />
+      <None Include="../icon.png" Pack="true" PackagePath="" />
+      <None Include="../../../../LICENSE.txt" Pack="true" PackagePath="" />
+      <None Include="../../../../NOTICE.txt" Pack="true" PackagePath="" />
+      <None Include="../../../../THIRD-PARTY-LICENSES.txt" Pack="true" PackagePath="" />
     </ItemGroup>
 
 
