use command from mavenCI to make the build work

--- a/.github/workflows/build-csharp.yml
+++ b/.github/workflows/build-csharp.yml
@@ -160,7 +160,7 @@ jobs:
       - name: Build Java 
         shell: bash
         run: |
-          mvn clean package
+          mvn --file pom.xml clean install
       
       - name: C Make
         shell: bash
