--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-compress</artifactId>
+                <version>1.28.0</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
