Remoevs Lz4 Shim and Updates Dependency Version
Using a shim does works locally, but does not allow us to publish.
Instead, we are manually excluding the problematic dependency and taking
an explicit dependency on the fixed version. Also adds an explicit test
for testing LZ4 compression.

--- a/avro-flink-serde/pom.xml
+++ b/avro-flink-serde/pom.xml
@@ -153,6 +153,10 @@
                     <groupId>org.apache.commons</groupId>
                     <artifactId>commons-compress</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.lz4</groupId>
+                    <artifactId>lz4-java</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
@@ -165,6 +169,10 @@
                 <exclusion>
                     <groupId>org.apache.commons</groupId>
                     <artifactId>commons-compress</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.lz4</groupId>
+                    <artifactId>lz4-java</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
